--- a/Lesson 3/results/HW_3.1/style.css
+++ b/Lesson 3/results/HW_3.1/style.css
@@ -3,19 +3,17 @@ body {
     height: 97vh;
     margin: 1.5vh 0.75vw;
     padding: 0;
+
     display: flex;
     gap: 1rem;
     flex-direction: column;
-    justify-content: stretch;
+
     color: white;
 }
 
 .widgets {
     background-color: steelblue;
     flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .big_widgets-container {
@@ -23,21 +21,19 @@ body {
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    align-items: stretch;
 }
 
 .big_widget {
     background-color: darkslateblue;
-    height: auto;
     flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .contact {
     background-color: steelblue;
     flex-grow: 2;
+}
+
+.text_container {
     display: flex;
     justify-content: center;
     align-items: center;
