--- a/Lesson 3/results/Allan_Jonson_web_site/css/about.css
+++ b/Lesson 3/results/Allan_Jonson_web_site/css/about.css
@@ -2,20 +2,19 @@
 
 main {
     gap: 5rem;
-    scroll-behavior: smooth;
     font-family: "Montserrat", sans-serif;
 }
 
-.card {
+h1 {
+    font-family: "Orbitron", sans-serif;
+}
+
+.full-page {
     width: 60rem;
     padding: 2rem;
 }
 
-main p {
-    text-transform: none;
-}
-
-ul {
+.card ul {
     padding: 0 1.1rem;
     font-size: 20px;
 }
@@ -29,10 +28,26 @@ ul {
     color: #007a00;
 }
 
+.row {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.card img {
+    height: 17rem;
+}
+
 .to_the_beginning_btn {
     position: absolute;
-    bottom: 50px;
-    right: 5rem;
+    bottom: 2rem;
+    right: 3rem;
     width: 3rem;
     height: 3rem;
     font-size: 1.5rem;
