--- a/Lesson 3/results/HW_3.1/style.css
+++ b/Lesson 3/results/HW_3.1/style.css
@@ -1,9 +1,9 @@
 body {
-    width: 98.5vw;
-    height: 97vh;
-    margin: 1.5vh 0.75vw;
-    padding: 0;
-
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    box-sizing: border-box;
+    padding: 1rem;
     display: flex;
     gap: 1rem;
     flex-direction: column;
