--- a/Lesson 3/results/Allan_Jonson_web_site/css/about.css
+++ b/Lesson 3/results/Allan_Jonson_web_site/css/about.css
@@ -5,11 +5,7 @@ main {
     font-family: "Montserrat", sans-serif;
 }
 
-h1 {
-    font-family: "Orbitron", sans-serif;
-}
-
-.full-page {
+.page-constraint {
     width: 60rem;
     padding: 2rem;
 }
@@ -42,6 +38,7 @@ h1 {
 
 .card img {
     height: 17rem;
+    object-fit: cover;
 }
 
 .to_the_beginning_btn {
