--- a/Lesson 3/results/Allan_Jonson_web_site/css/main.css
+++ b/Lesson 3/results/Allan_Jonson_web_site/css/main.css
@@ -71,6 +71,7 @@ main p {
 main h1 {
     font-size: 100px;
     letter-spacing: 30px;
+    font-family: "Orbitron", sans-serif;
 }
 
 main button {
