--- a/Lesson 3/results/Allan_Jonson_web_site/css/contact.css
+++ b/Lesson 3/results/Allan_Jonson_web_site/css/contact.css
@@ -1,30 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-main {
-    justify-content: space-around;
-}
-
-.contact-container {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: stretch;
-    gap: 5rem;
-    font-family: "Montserrat", sans-serif;
-}
-
 img.card {
-    width: 23rem;
     padding-bottom: 0;
     object-fit: cover;
 }
 
-h2 {
+.card {
+    width: 420px;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.card h2 {
     margin: 1rem 0;
 }
 
 .contact-item {
+    width: fit-content;
     display: flex;
     gap: 1rem;
     align-items: center;
@@ -33,4 +25,8 @@ h2 {
 .contact-item img {
     height: 2rem;
     width: 2rem;
+}
+
+.column {
+    align-items: start;
 }
