--- a/Lesson 3/results/Allan_Jonson_web_site/css/main.css
+++ b/Lesson 3/results/Allan_Jonson_web_site/css/main.css
@@ -71,32 +71,11 @@ main p {
 main h1 {
     font-size: 100px;
     letter-spacing: 30px;
-    font-family: "Orbitron", sans-serif;
+    margin: 2rem 0;
 }
 
-main button {
-    width: 160px;
-    height: 40px;
-    background: black;
-    color: white;
-    border: none;
-    margin-top: 30px;
-    transition: 0.5s;
-}
-
-main button:hover {
+.main-btn:hover {
     transform: scale(1.1);
     color: #416559;
     transition: 1s;
-}
-
-.card {
-    padding: 1rem 2rem 2rem 2rem;
-    background-color: rgba(256, 256, 256, 0.8);
-    border-radius: 0.5rem;
-    box-shadow: 10px 10px 15px -5px rgba(25, 54, 17, 0.2);
-
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
 }
