--- a/Lesson 3/results/Allan_Jonson_web_site/css/components.css
+++ b/Lesson 3/results/Allan_Jonson_web_site/css/components.css
@@ -105,7 +105,7 @@ button {
     transition: 0.5s;
 }
 
-.to_the_beginning_btn {
+.to-the-beginning-btn {
     position: absolute;
     bottom: 2rem;
     right: 3rem;
