--- a/Lesson 5/HW_2.1/preloader-1/style.css
+++ b/Lesson 5/HW_2.1/preloader-1/style.css
@@ -24,25 +24,16 @@ main {
     position: absolute;
     width: 140px;
     height: 140px;
-    animation: gears-1 5s linear infinite;
+    animation: gears-1-animation 5s linear infinite;
 }
 
 .gear-2 {
+    position: absolute;
     width: 120px;
     height: 120px;
-
-    position: absolute;
     top: 71px;
     left: 115px;
-    animation: gears-2 5s linear infinite;
-}
-
-.gear-2 path {
-    fill: #2C30A8;
-}
-
-.gear-1 path {
-    fill: #A82C2C;
+    animation: gears-2-animation 5s linear infinite;
 }
 
 .text {
@@ -64,35 +55,11 @@ main {
 
     offset-path: path("M56.924 7.40617C32.6488 17.2896 12.7295 37.99 4.71161 65.1536C1.31827 79.2773 0.441501 87.6093 1.31708 103.462C3.69159 121.034 11.52 137.825 24.8339 151.079C33.7998 160.005 36.6766 162.73 55.5855 170.302C74.4945 177.875 103.109 182.498 116.515 188.11C129.92 193.723 148.276 210.733 159.876 218.176C171.477 225.618 185.29 229.39 200.497 229.032C241.611 228.065 275.328 193.702 275.805 152.281C276.101 126.635 264.036 104.249 245.045 91.1479C226.053 78.0465 212.933 77.3232 194.38 65.0714C172.287 50.4828 159.101 33.2276 143.087 20.7376C127.073 8.24762 123.253 7.12516 110.966 3.84117C92.7203 -1.03547 74.0748 0.547017 57.4396 7.1981");
     offset-position: center;
-    animation: text 10s linear infinite;
+    animation: text-animation 10s linear infinite;
+    animation-delay: calc(250ms * var(--i));
 }
 
-li:nth-child(8) {
-    animation-delay: 0ms;
-}
-li:nth-child(7) {
-    animation-delay: 250ms;
-}
-li:nth-child(6) {
-    animation-delay: 500ms;
-}
-li:nth-child(5) {
-    animation-delay: 750ms;
-}
-li:nth-child(4) {
-    animation-delay: 1000ms;
-}
-li:nth-child(3) {
-    animation-delay: 1250ms;
-}
-li:nth-child(2) {
-    animation-delay: 1500ms;
-}
-li:nth-child(1) {
-    animation-delay: 1750ms;
-}
-
-@keyframes gears-1 {
+@keyframes gears-1-animation {
     from {
         transform: rotate(0.12217304763960307rad);
     }
@@ -102,7 +69,7 @@ li:nth-child(1) {
     }
 }
 
-@keyframes gears-2 {
+@keyframes gears-2-animation {
     from {
         transform: rotate(-0.23561944901923448rad);
     }
@@ -111,7 +78,7 @@ li:nth-child(1) {
     }
 }
 
-@keyframes text {
+@keyframes text-animation {
     from {
         offset-distance: 0;
     }
