--- a/Lesson 5/HW_2.1/preloader-2/style.css
+++ b/Lesson 5/HW_2.1/preloader-2/style.css
@@ -18,39 +18,32 @@ main {
 
 .animation {
     position: relative;
-    height: 40vh;
+    height: 20vh;
     width: 20vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: center;
 }
 
 .spinner li {
     position: absolute;
     top: 0;
     left: 0;
-    height: 50%;
+    height: 100%;
     width: 100%;
     transform: rotate(calc(22.25deg * var(--i)));
 }
 
-.spinner li::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
+.spinner li div {
     width: 2.5vh;
     height: 2.5vh;
     border-radius: 50%;
-    animation: spinner-animation 2.4s linear infinite;
-    animation-delay: calc(var(--i)* 0.15s);
-    box-shadow: 15px 15px 30px 10px rgba(89, 1, 181, 0.5),
+    box-shadow: 12px 12px 25px 10px rgba(89, 1, 181, 0.5),
                 10px 10px 15px 5px rgb(154, 4, 146),
-                0 0 4px 4px rgba(189,0,82,0.5),
+                0 0 4px 4px rgba(189, 0, 82, 0.5),
                 0 0 2px 2px rgb(228, 73, 26, 0.75);
-    background: #e43c16;
+    background: #E43C16;
     background: radial-gradient(circle, rgba(233, 211, 63, 1) 0%, rgba(228, 73, 26, 0.8) 50%, rgba(177, 11, 154, 0.6) 100%);
+
+    animation: spinner-animation 2.4s linear infinite;
+    animation-delay: calc(var(--i) * 0.15s);
 }
 
 @keyframes spinner-animation {
@@ -62,34 +55,26 @@ main {
     }
 }
 
-.text {
-    color: #1E1E1E;
-    font-size: 10vh;
-    display: flex;
-    font-family: "Codystar", sans-serif;
-}
-
 .text li {
-    display: flex;
-    align-items: end;
-    transform: rotate(calc(15grad * (4 - var(--i))));
-
-    animation: blink-animation 8s infinite;
-    animation-delay: calc(var(--i)* 1.14s);
+    animation: blink-animation 7s linear infinite;
+    animation-delay: calc(var(--i) * 1s);
 }
 
-.text li:nth-child(1), .text li:nth-child(7) {
-    margin-bottom: calc(10vh * 0.414214);
-}
-.text li:nth-child(2), .text li:nth-child(6) {
-    margin-bottom: calc(10vh * 0.154701);
+.text li span{
+    position: absolute;
+    left: -10vh;
+    top: 20vh;
+    font-size: 10vh;
+    font-family: "Codystar", sans-serif;
+    offset-path: path("M1.27019 1C25.4072 53.7956 83.4739 91 151.27 91C219.066 91 277.133 53.7956 301.27 1");
+    offset-distance: calc(7% + 100% *  var(--i) / 7);
 }
 
 @keyframes blink-animation {
     from, 7%, 9%, 11%, 13% {
-        color: rgba(233,211,63);
+        color: #E9D33F;
     }
     8%, 10%, 12%, 14%, to {
-        color: rgba(0,0,0);
+        color: #1E1E1E;
     }
 }
