--- a/Lesson 5/HW_2.1/preloader-3/style.css
+++ b/Lesson 5/HW_2.1/preloader-3/style.css
@@ -10,18 +10,23 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-
     background-color: #1E1E1E;
 }
 
 li {
     position: fixed;
     font-family: "Cutive Mono", serif;
-    font-size: 40vh;
-    top: -40vh;
-    left: calc((100vw - 140vh)/2 + 20vh * var(--i));
-    animation: move-letter-animation 10.5s infinite ease-out;
-    animation-delay: calc(var(--i)* 0.75s);
+    font-size: 10vw;
+    width: 10vw;
+    text-align: center;
+    top: -10vw;
+    left: calc(15vw + 10vw * var(--i));
+
+    --top-center: calc(50vh + 5vw);
+    --bottom: calc(100vh + 10vw);
+
+    animation: move-letter-animation 14s infinite ease-in-out;
+    animation-delay: calc(var(--i)* 1s);
 }
 
 li:nth-child(1) {
@@ -51,9 +56,9 @@ li:nth-child(7) {
         transform: translateY(-40vh);
     }
     7%, 50% {
-        transform: translateY(70vh);
+        transform: translateY(var(--top-center));
     }
     57%, to {
-        transform: translateY(150vh);
+        transform: translateY(var(--bottom));
     }
 }
