--- a/Lesson 6/results/HW_6.1/style.css
+++ b/Lesson 6/results/HW_6.1/style.css
@@ -2,76 +2,27 @@ h3 {
     margin-top: 3rem;
 }
 
-ul {
-    padding-inline-start: 0;
-    list-style-type: none;
+/*--------------for task---------------*/
+.first-list > ul > li:nth-child(2n) {
+    color: deeppink;
 }
 
-li {
-    display: flex;
-    align-items: center;
+.second-list > ul > li:nth-child(2n+1) {
+    font-size: 22px;
 }
 
-div li::before {
-    content: "";
-    display: inline-block;
-    width: 1rem;
-    height: 1rem;
-    margin: 0.25rem 0.75rem 0.25rem 0;
-    background-size: cover;
-    background-position: center;
+.third-list > ul > li:nth-child(2n+4)::after {
+    content: " !";
+    color: red;
 }
 
-div li:nth-child(1)::before, li:nth-child(2)::before {
-    background-image: url("icons/uk.png");
-}
-div li:nth-child(3)::before {
-    background-image: url("icons/usa.png");
-}
-div li:nth-child(4)::before {
-    background-image: url("icons/australia.png");
-}
-div li:nth-child(5)::before {
-    background-image: url("icons/anonymous.png");
-}
-div li:nth-child(6)::before {
-    background-image: url("icons/author.png");
-}
-div li:nth-child(7)::before {
-    background-image: url("icons/banned.png");
-}
-div li:nth-child(8)::before {
-    background-image: url("icons/teen.png");
-}
-div li:nth-child(9)::before {
-    background-image: url("icons/literature.png");
-}
-div li:nth-child(10)::before {
-    background-image: url("icons/year.png");
-}
-div li:nth-child(11)::before {
-    background-image: url("icons/film.png");
-}
-div li:nth-child(12)::before {
-    background-image: url("icons/christian.png");
+.forth-list > ul > li:last-of-type {
+    color: red;
 }
 
-.first-list {
-    color: darkred;
+.fifth-list > ul > li::first-letter {
+    color: red;
+    font-size: 30px;
 }
+/*-------------------------------------*/
 
-.second-list {
-    color: darkblue;
-}
-
-.third-list {
-    color: darkgreen;
-}
-
-.forth-list {
-    color: darkorange;
-}
-
-.fifth-list {
-    color: darkmagenta;
-}
